--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,38 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="add_ingridients">Add Ingridients</string>
+
+
+    //Settings activity----------------------------
+    <string name="chooseLanguage_en">Choose language</string>
+    <string name="chooseLanguage_ru">Выберите язык</string>
+
+    <string name="localization_en">Localization</string>
+    <string name="localization_ru">Локализация</string>
+
+    <string name="language_en">Language</string>
+    <string name="language_ru">Язык</string>
+
+    <!--холодильник-->
+    <!--блюдо дня-->
+    <!--все рецепты-->
+    <!--настройки-->
+    <!--оставить отзыв-->
+    <!--справка-->
+
+    <string name="fridge_en">Fridge</string>
+    <string name="fridge_ru">Холодильник</string>
+    <string name="dish_of_a_day_en">Dish of a day</string>
+    <string name="dish_of_a_day_ru">Блюдо дня</string>
+    <string name="all_recipes_en">All Recipes</string>
+    <string name="all_recipes_ru">Все рецепты</string>
+    <string name="settings_en">Settings</string>
+    <string name="settings_ru">Настройки</string>
+    <string name="leave_feedback_en">Leave feedback</string>
+    <string name="leave_feedback_ru">Оставить отзыв</string>
+    <string name="about_en">About</string>
+    <string name="about_ru">Справка</string>
+
+
+    //--------------------------------------
 </resources>
