--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="two_or_four_products">продукта</string>
     <string name="more_products">продуктов</string>
 
+    <string name="one_step">ШАГ</string>
+    <string name="two_or_four_steps">ШАГА</string>
+    <string name="more_steps">ШАГОВ</string>
+
 
     <string name="localization_en">Localization</string>
     <string name="localization_ru">Локализация</string>
