Some fixes. New info card in preview. Need to fix some bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NomApp_beta</string>
+    <string name="app_name">Nom-Nom</string>
 
 
     <string name="font_fontFamily_medium">sans-serif</string>
